[package]
name = "iris"
version = "0.1.0"
edition = "2021"
default-run = "iris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "iris"
path = "src/main.rs"

[[bin]]
name = "version"
path = "scripts/version.rs"

[[bin]]
name = "name"
path = "scripts/name.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serenity = { git = "https://github.com/vars1ty/serenity", branch = "current",default-features = false, features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend" ] }
# logger_rs = { path = "/home/hidemaru/Code/logger-rs" }
logger_rs = { git = "https://github.com/HidemaruOwO/logger-rs", branch = "main" }
tokio = { version = "1.32.0", features = ["rt-multi-thread"]}
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.31"
hostname = "0.3.1"
sys-info = "0.9.1"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", branch = "master" }
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.5"
