[package]
name = "iris"
version = "0.1.0"
edition = "2021"
default-run = "iris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "iris"
path = "src/main.rs"

[[bin]]
name = "version"
path = "scripts/version.rs"

[[bin]]
name = "name"
path = "scripts/name.rs"

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
serenity = { git = "https://github.com/vars1ty/serenity", branch = "current",default-features = false, features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend" ] }
# logger_rs = { path = "/home/hidemaru/Code/logger-rs" }
logger_rs = { git = "https://github.com/HidemaruOwO/logger-rs", branch = "main" }
tokio = { version = "1.34.0", features = ["rt-multi-thread"]}
reqwest = "0.11.22"
serde = "1.0.197"
serde_json = "1.0.108"
chrono = "0.4.31"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", branch = "master" }
openssl = { version = "0.10.59", features = ["vendored"] }
rand = "0.8.5"
regex = "1.10.2"
url = "2.5.0"
